# MIPT-networked

./: .gitignore  CMakeLists.txt
w1/: client.cpp  makefile  server.cpp
w2/: CMakeLists.txt  NetworkUtils.hpp  client.cpp  lobby.cpp  server.cpp
w4/: CMakeLists.txt  bitstream.hpp  client.cpp  entity.h  protocol.cpp  protocol.h  server.cpp
w5/: CMakeLists.txt  PhysConsts.hpp  client.cpp  entity.cpp  entity.h  protocol.cpp  protocol.h  server.cpp
w7/: CMakeLists.txt  bitstream.hpp  client.cpp  protocol.cpp  protocol.h  quantisation.h  server.cpp
